--- a/lib.tsconfig.json
+++ b/lib.tsconfig.json
@@ -11,7 +11,8 @@
     "outDir": "./dist-lib",
     "baseUrl": "lib",
     "rootDir": "./lib",
-    "incremental": true
+    "incremental": true,
+    "esModuleInterop":false
   },
   "exclude": ["node_modules", "dist", "src"]
 }
