--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "graphql-test-1",
+  "name": "nestjs-graphql-tools",
   "version": "0.0.1",
   "description": "",
-  "author": "",
-  "private": true,
+  "author": "Alexey Panfilkin",
+  "private": false,
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "cleanup": "rm lib.tsconfig.tsbuildinfo || true && rm -rf dist-lib || true"
+    "cleanup": "rm lib.tsconfig.tsbuildinfo || true && rm -rf dist-lib || true",
+    "release": "release-it"
   },
   "dependencies": {
     "@apollo/gateway": "^2.0.5",
@@ -53,6 +54,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
     "jest": "28.1.2",
+    "release-it": "^15.4.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.5",
@@ -77,5 +79,6 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "release-it": {}
 }
