--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "cleanup": "rm lib.tsconfig.tsbuildinfo || true && rm -rf dist-lib || true",
-    "release": "release-it"
+    "release": "npm run build && release-it"
   },
   "dependencies": {
     "@apollo/gateway": "^2.0.5",
