--- a/package.json
+++ b/package.json
@@ -25,23 +25,8 @@
     "release": "npm run build && release-it"
   },
   "dependencies": {
-    "@apollo/gateway": "^2.0.5",
-    "@nestjs/apollo": "^10.0.22",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.0.22",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/typeorm": "^9.0.1",
-    "apollo-server-express": "^3.10.1",
-    "config": "^3.3.7",
     "dataloader": "^2.1.0",
-    "graphql": "^16.6.0",
-    "graphql-type-json": "^0.3.2",
-    "pg": "^8.7.3",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "ts-morph": "^15.1.0",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
@@ -63,7 +48,23 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "@apollo/gateway": "^2.0.5",
+    "@nestjs/apollo": "^10.0.22",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^10.0.22",
+    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "apollo-server-express": "^3.10.1",
+    "config": "^3.3.7",
+    "graphql": "^16.6.0",
+    "graphql-type-json": "^0.3.2",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.2.0",
+    "ts-morph": "^15.1.0"
   },
   "jest": {
     "moduleFileExtensions": [
