--- a/package.json
+++ b/package.json
@@ -27,44 +27,45 @@
   "dependencies": {
     "@nestjs/graphql": "^10.0.22",
     "dataloader": "^2.1.0",
+    "nestjs-graphql-tools": "^0.0.6",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
+    "@apollo/gateway": "^2.0.5",
+    "@nestjs/apollo": "^10.0.22",
     "@nestjs/cli": "^9.0.0",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^10.0.22",
+    "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "apollo-server-express": "^3.10.1",
+    "config": "^3.3.7",
     "eslint": "^8.0.1",
+    "graphql": "^16.6.0",
+    "graphql-type-json": "^0.3.2",
     "jest": "28.1.2",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
     "release-it": "^15.4.0",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.2.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.5",
     "ts-loader": "^9.2.3",
+    "ts-morph": "^15.1.0",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5",
-    "@apollo/gateway": "^2.0.5",
-    "@nestjs/apollo": "^10.0.22",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/graphql": "^10.0.22",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/typeorm": "^9.0.1",
-    "apollo-server-express": "^3.10.1",
-    "config": "^3.3.7",
-    "graphql": "^16.6.0",
-    "graphql-type-json": "^0.3.2",
-    "pg": "^8.7.3",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "ts-morph": "^15.1.0"
+    "typescript": "^4.3.5"
   },
   "jest": {
     "moduleFileExtensions": [
