Update readme, added changelog, update deps

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": false,
   "license": "MIT",
   "main": "dist-lib/index.js",
+  "homepage": "https://adrinalin4ik.github.io/Nestjs-Graphql-Tools",
   "repository": "https://github.com/Adrinalin4ik/Nestjs-Graphql-Tools",
   "keywords": [
     "graphql",
@@ -35,9 +36,9 @@
     "release": "npm run build && release-it"
   },
   "dependencies": {
-    "@nestjs/graphql": "^10.1.3",
+    "@nestjs/graphql": ">8.0.0",
     "dataloader": "^2.1.0",
-    "typeorm": "^0.3.10"
+    "typeorm": ">0.3.0"
   },
   "devDependencies": {
     "@apollo/gateway": "^2.0.5",
