--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "apollo-server-express": "^3.10.1",
+    "axios": "^1.2.1",
     "config": "^3.3.7",
     "eslint": "^8.0.1",
     "graphql": "^16.6.0",
@@ -70,6 +71,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "source-map-support": "^0.5.20",
+    "sqlite3": "^5.1.4",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.5",
     "ts-loader": "^9.2.3",
