--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
   },
   "devDependencies": {
     "@apollo/gateway": "^2.0.5",
+    "@envelop/core": "^3.0.4",
+    "@envelop/live-query": "^5.0.4",
+    "@graphql-yoga/nestjs": "^0.3.0",
+    "@n1ru4l/graphql-live-query-patch-jsondiffpatch": "^0.8.0",
+    "@n1ru4l/in-memory-live-query-store": "^0.10.0",
     "@nestjs/apollo": "^10.0.22",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/common": "^9.0.0",
@@ -64,6 +69,7 @@
     "eslint": "^8.0.1",
     "graphql": "^16.6.0",
     "graphql-type-json": "^0.3.2",
+    "graphql-ws": "^5.11.3",
     "jest": "28.1.2",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
