--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "config": "^3.3.7",
     "eslint": "^8.0.1",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-type-json": "^0.3.2",
+    "graphql-ws": "^5.11.3",
     "jest": "28.1.2",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
