--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   },
   "devDependencies": {
     "@apollo/gateway": "^2.0.5",
+    "@envelop/core": "^3.0.4",
+    "@envelop/response-cache": "^4.0.5",
     "@nestjs/apollo": "^10.0.22",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/common": "^9.0.0",
@@ -59,12 +61,14 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "apollo-server-express": "^3.10.1",
+    "apollo-server-plugin-response-cache": "^3.8.1",
     "axios": "^1.2.1",
     "config": "^3.3.7",
     "eslint": "^8.0.1",
     "graphql": "^16.6.0",
     "graphql-type-json": "^0.3.2",
     "jest": "28.1.2",
+    "nestjs-gql-cache-control": "^0.1.2",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "release-it": "^15.6.0",
