--- a/package.json
+++ b/package.json
@@ -48,36 +48,37 @@
     "typeorm": ">0.3.0"
   },
   "devDependencies": {
-    "@apollo/gateway": "^2.0.5",
-    "@nestjs/apollo": "^10.0.22",
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/graphql": "^10.0.22",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@nestjs/typeorm": "^9.0.1",
-    "@types/express": "^4.17.13",
-    "@types/jest": "28.1.4",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "apollo-server-express": "^3.10.1",
-    "axios": "^1.2.1",
-    "config": "^3.3.7",
-    "eslint": "^8.0.1",
-    "graphql": "^16.6.0",
+    "@apollo/gateway": "^2.4.12",
+    "@apollo/server": "^4.9.1",
+    "@nestjs/apollo": "^12.0.7",
+    "@nestjs/cli": "^10.1.12",
+    "@nestjs/common": "^10.2.0",
+    "@nestjs/core": "^10.2.0",
+    "@nestjs/graphql": "^12.0.8",
+    "@nestjs/platform-express": "^10.2.0",
+    "@nestjs/schematics": "^10.0.2",
+    "@nestjs/testing": "^10.2.0",
+    "@nestjs/typeorm": "^10.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jest": "29.5.3",
+    "@types/node": "^20.5.1",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "apollo-server-express": "^3.12.0",
+    "axios": "^1.4.0",
+    "config": "^3.3.9",
+    "eslint": "^8.47.0",
+    "graphql": "^16.8.0",
     "graphql-type-json": "^0.3.2",
-    "jest": "28.1.2",
+    "jest": "29.6.3",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
-    "release-it": "^15.6.0",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "source-map-support": "^0.5.20",
-    "sqlite3": "^5.1.4",
+    "release-it": "^16.1.5",
+    "rimraf": "^5.0.1",
+    "rxjs": "^7.8.1",
+    "source-map-support": "^0.5.21",
+    "sqlite3": "^5.1.6",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.5",
     "ts-loader": "^9.2.3",
