--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "@typescript-eslint/parser": "^6.4.1",
     "apollo-server-express": "^3.12.0",
     "axios": "^1.4.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "config": "^3.3.9",
     "eslint": "^8.47.0",
     "graphql": "^16.8.0",
