--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@apollo/gateway": "^2.5.5",
     "@apollo/server": "^4.9.4",
     "@nestjs/apollo": "^12.0.9",
+    "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/cli": "^10.1.18",
     "@nestjs/common": "^10.2.7",
     "@nestjs/core": "^10.2.7",
@@ -67,6 +68,7 @@
     "@typescript-eslint/parser": "^6.7.4",
     "apollo-server-express": "^3.12.1",
     "axios": "^1.5.1",
+    "cache-manager": "^5.2.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "config": "^3.3.9",
