--- a/package.json
+++ b/package.json
@@ -43,18 +43,21 @@
     "db:migrate": "typeorm migration:run"
   },
   "dependencies": {
+    "dataloader": "^2.1.0"
+  },
+  "peerDependencies": {
     "@nestjs/graphql": ">8.0.0",
-    "dataloader": "^2.1.0",
     "typeorm": ">0.3.0"
   },
   "devDependencies": {
+    "@nestjs/graphql": ">8.0.0",
+    "typeorm": ">0.3.0",
     "@apollo/gateway": "^2.5.5",
     "@apollo/server": "^4.9.4",
     "@nestjs/apollo": "^12.0.9",
     "@nestjs/cli": "^10.1.18",
     "@nestjs/common": "^10.2.7",
     "@nestjs/core": "^10.2.7",
-    "@nestjs/graphql": "^12.0.9",
     "@nestjs/platform-express": "^10.2.7",
     "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^10.2.7",
