--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Nestjs Graphql automation library for building performant API",
   "author": "Alexey Panfilkin",
   "private": false,
-  "license": "GNU GPLv3",
+  "license": "GPL-3.0-only",
   "main": "dist-lib/index.js",
   "homepage": "https://adrinalin4ik.github.io/Nestjs-Graphql-Tools",
   "repository": "https://github.com/Adrinalin4ik/Nestjs-Graphql-Tools",
@@ -24,6 +24,10 @@
     "typescript",
     "nestjs"
   ],
+  "engines" : { 
+    "npm" : ">=8.0.0 <9.0.0",
+    "node" : ">=16.0.0"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "npm run cleanup && tsc -p lib.tsconfig.json",
@@ -50,47 +54,51 @@
     "typeorm": ">0.3.0"
   },
   "devDependencies": {
-    "@apollo/gateway": "^2.5.5",
-    "@apollo/server": "^4.9.4",
-    "@nestjs/apollo": "^12.0.9",
-    "@nestjs/cli": "^10.1.18",
-    "@nestjs/common": "^10.2.7",
-    "@nestjs/core": "^10.2.7",
-    "@nestjs/graphql": ">8.0.0",
-    "@nestjs/platform-express": "^10.2.7",
-    "@nestjs/schematics": "^10.0.2",
-    "@nestjs/testing": "^10.2.7",
-    "@nestjs/typeorm": "^10.0.0",
-    "@types/express": "^4.17.18",
-    "@types/jest": "29.5.5",
-    "@types/node": "^20.8.2",
-    "@types/supertest": "^2.0.14",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
+    "@apollo/gateway": "^2.8.0",
+    "@apollo/server": "^4.10.4",
+    "@nestjs/apollo": "^12.1.0",
+    "@nestjs/cli": "^10.3.2",
+    "@nestjs/common": "^10.3.9",
+    "@nestjs/core": "^10.3.9",
+    "@nestjs/graphql": ">=12.1.1",
+    "@nestjs/platform-express": "^10.3.9",
+    "@nestjs/schematics": "^10.1.1",
+    "@nestjs/testing": "^10.3.9",
+    "@nestjs/typeorm": "^10.0.2",
+    "@types/express": "^4.17.21",
+    "@types/jest": "29.5.12",
+    "@types/node": "^20.14.2",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "apollo-server-express": "^3.12.1",
-    "axios": "^1.5.1",
+    "axios": "^1.7.2",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "config": "^3.3.9",
-    "eslint": "^8.50.0",
+    "class-validator": "^0.14.1",
+    "config": "^3.3.11",
+    "eslint": "^9.4.0",
     "graphql": "^16.8.1",
     "graphql-type-json": "^0.3.2",
     "jest": "29.7.0",
-    "pg": "^8.11.3",
-    "reflect-metadata": "^0.1.13",
-    "release-it": "^16.2.1",
-    "rimraf": "^5.0.5",
+    "pg": "^8.12.0",
+    "reflect-metadata": "^0.1.14",
+    "release-it": "^16.3.0",
+    "rimraf": "^5.0.7",
     "rxjs": "^7.8.1",
     "source-map-support": "^0.5.21",
-    "sqlite3": "^5.1.6",
-    "supertest": "^6.3.3",
-    "ts-jest": "29.1.1",
-    "ts-loader": "^9.4.4",
-    "ts-morph": "^20.0.0",
-    "ts-node": "^10.9.1",
+    "sqlite3": "^5.1.7",
+    "supertest": "^7.0.0",
+    "ts-jest": "29.1.4",
+    "ts-loader": "^9.5.1",
+    "ts-morph": "^22.0.0",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typeorm": ">0.3.0",
-    "typescript": "^5.2.2"
+    "typeorm": ">=0.3.20",
+    "typescript": "^5.4.5"
+  },
+  "resolutions": {
+    "wrap-ansi": "7.0.0",
+    "string-width": "4.1.0"
   },
   "jest": {
     "moduleFileExtensions": [
